--- a/OurSpace/OurSpace/Base.lproj/Main.storyboard
+++ b/OurSpace/OurSpace/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -68,7 +68,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Zi-ZI-6u2">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Zi-ZI-6u2">
                                 <rect key="frame" x="83" y="245" width="209" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="uPk-Hw-N3X"/>
@@ -77,7 +77,7 @@
                                 <color key="textColor" red="0.82642844400000004" green="0.2709082364" blue="0.24221107780000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c62-Hn-T0R">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c62-Hn-T0R">
                                 <rect key="frame" x="83" y="356" width="209" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="foD-Al-Y37"/>
@@ -312,13 +312,7 @@
                                     <segue destination="BYZ-38-t0r" kind="show" id="Hxs-Im-tuI"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qrQ-Jf-uNR">
-                                <rect key="frame" x="83" y="418.5" width="209" height="0.0"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <color key="textColor" red="0.82642844400000004" green="0.2709082364" blue="0.24221107780000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jYn-8n-eaB">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jYn-8n-eaB">
                                 <rect key="frame" x="83" y="260.5" width="209" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="hM3-th-rf7"/>
@@ -333,6 +327,15 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qrQ-Jf-uNR">
+                                <rect key="frame" x="63" y="416.5" width="249" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="rHF-MK-gWh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="0.82642844400000004" green="0.2709082364" blue="0.24221107780000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -341,7 +344,6 @@
                             <constraint firstItem="yXG-Oq-BC5" firstAttribute="top" secondItem="Ys8-mh-vD0" secondAttribute="bottom" constant="32" id="6cb-an-4wV"/>
                             <constraint firstItem="jLb-B1-CVB" firstAttribute="trailing" secondItem="JSr-yt-Lc8" secondAttribute="trailing" constant="83" id="72w-JG-vA7"/>
                             <constraint firstItem="viM-V6-3dP" firstAttribute="leading" secondItem="jLb-B1-CVB" secondAttribute="leading" constant="83" id="7dl-ud-NQ1"/>
-                            <constraint firstItem="qrQ-Jf-uNR" firstAttribute="top" secondItem="JSr-yt-Lc8" secondAttribute="bottom" constant="8" id="8oC-gs-2fq"/>
                             <constraint firstItem="jLb-B1-CVB" firstAttribute="trailing" secondItem="viM-V6-3dP" secondAttribute="trailing" constant="83" id="A8i-UL-JQv"/>
                             <constraint firstItem="jYn-8n-eaB" firstAttribute="top" secondItem="dw2-rB-1ag" secondAttribute="bottom" constant="6" id="BU9-Tk-lvE"/>
                             <constraint firstItem="LUJ-oL-53o" firstAttribute="leading" secondItem="jLb-B1-CVB" secondAttribute="leading" constant="83" id="DbG-uJ-HiX"/>
@@ -349,8 +351,8 @@
                             <constraint firstItem="jYn-8n-eaB" firstAttribute="leading" secondItem="jLb-B1-CVB" secondAttribute="leading" constant="83" id="GCY-nx-eT2"/>
                             <constraint firstItem="Ga3-78-2dA" firstAttribute="leading" secondItem="yXG-Oq-BC5" secondAttribute="trailing" constant="2" id="Hm9-FC-ZEs"/>
                             <constraint firstItem="dw2-rB-1ag" firstAttribute="top" secondItem="LUJ-oL-53o" secondAttribute="bottom" constant="6" id="IcF-kR-2fQ"/>
+                            <constraint firstItem="qrQ-Jf-uNR" firstAttribute="top" secondItem="JSr-yt-Lc8" secondAttribute="bottom" constant="6" id="JXP-jY-L4y"/>
                             <constraint firstItem="jLb-B1-CVB" firstAttribute="trailing" secondItem="Ga3-78-2dA" secondAttribute="trailing" constant="80" id="LME-bC-08T"/>
-                            <constraint firstItem="jLb-B1-CVB" firstAttribute="trailing" secondItem="qrQ-Jf-uNR" secondAttribute="trailing" constant="83" id="MFG-g5-eLw"/>
                             <constraint firstItem="jLb-B1-CVB" firstAttribute="bottom" secondItem="Ga3-78-2dA" secondAttribute="bottom" constant="116" id="MHo-LK-6Pk"/>
                             <constraint firstItem="SHh-6S-P2G" firstAttribute="leading" secondItem="jLb-B1-CVB" secondAttribute="leading" constant="83" id="N8S-DI-ZKR"/>
                             <constraint firstItem="JSr-yt-Lc8" firstAttribute="top" secondItem="viM-V6-3dP" secondAttribute="bottom" constant="32" id="NVd-yc-hUw"/>
@@ -358,8 +360,7 @@
                             <constraint firstItem="BFH-mb-81h" firstAttribute="leading" secondItem="jLb-B1-CVB" secondAttribute="leading" constant="83" id="RUX-Ib-03L"/>
                             <constraint firstItem="jLb-B1-CVB" firstAttribute="trailing" secondItem="Ys8-mh-vD0" secondAttribute="trailing" constant="159" id="SII-CQ-SUd"/>
                             <constraint firstItem="hgB-bn-r66" firstAttribute="leading" secondItem="jLb-B1-CVB" secondAttribute="leading" constant="120" id="Sb5-Hv-eFg"/>
-                            <constraint firstItem="qrQ-Jf-uNR" firstAttribute="leading" secondItem="jLb-B1-CVB" secondAttribute="leading" constant="83" id="Wgd-CO-vS4"/>
-                            <constraint firstItem="Ys8-mh-vD0" firstAttribute="top" secondItem="qrQ-Jf-uNR" secondAttribute="bottom" constant="46.5" id="ahU-1I-wP3"/>
+                            <constraint firstItem="qrQ-Jf-uNR" firstAttribute="leading" secondItem="jLb-B1-CVB" secondAttribute="leading" constant="63" id="aYC-iI-i20"/>
                             <constraint firstItem="Ga3-78-2dA" firstAttribute="leading" secondItem="yXG-Oq-BC5" secondAttribute="trailing" constant="2" id="c0e-im-sCj"/>
                             <constraint firstItem="SHh-6S-P2G" firstAttribute="top" secondItem="BFH-mb-81h" secondAttribute="bottom" constant="6" id="duG-2y-Og8"/>
                             <constraint firstItem="jLb-B1-CVB" firstAttribute="trailing" secondItem="dw2-rB-1ag" secondAttribute="trailing" constant="83" id="ecS-zZ-PWr"/>
@@ -367,6 +368,7 @@
                             <constraint firstItem="jLb-B1-CVB" firstAttribute="bottom" secondItem="yXG-Oq-BC5" secondAttribute="bottom" constant="122" id="hfM-9C-VQS"/>
                             <constraint firstItem="2sY-ac-AlD" firstAttribute="leading" secondItem="jLb-B1-CVB" secondAttribute="leading" constant="83" id="ihb-FJ-sW4"/>
                             <constraint firstItem="viM-V6-3dP" firstAttribute="top" secondItem="dw2-rB-1ag" secondAttribute="bottom" constant="64" id="nfg-iO-wQT"/>
+                            <constraint firstItem="jLb-B1-CVB" firstAttribute="trailing" secondItem="qrQ-Jf-uNR" secondAttribute="trailing" constant="63" id="p8d-Bs-SFq"/>
                             <constraint firstItem="Ys8-mh-vD0" firstAttribute="leading" secondItem="jLb-B1-CVB" secondAttribute="leading" constant="159" id="pfL-o1-xus"/>
                             <constraint firstItem="SHh-6S-P2G" firstAttribute="top" secondItem="hgB-bn-r66" secondAttribute="bottom" constant="72.5" id="sH9-ub-6zs"/>
                             <constraint firstItem="jLb-B1-CVB" firstAttribute="trailing" secondItem="SHh-6S-P2G" secondAttribute="trailing" constant="83" id="tWh-VQ-Myf"/>
