--- a/OurSpace/OurSpace/Base.lproj/Main.storyboard
+++ b/OurSpace/OurSpace/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,9 +20,6 @@
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Rhh-I1-9mk">
                                 <rect key="frame" x="51" y="345" width="273" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="xL5-T8-4ez"/>
-                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="26"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
@@ -34,9 +31,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="deV-4F-AdH">
-                                <rect key="frame" x="88.5" y="497" width="198" height="30"/>
+                                <rect key="frame" x="89" y="497" width="198" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="5Wa-vl-ygI"/>
+                                    <constraint firstAttribute="height" constant="30" id="kru-zx-x9k"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="12"/>
                                 <state key="normal" title="Dont have an account? Register here">
@@ -52,7 +49,7 @@
                                 <rect key="frame" x="51" y="419" width="273" height="54"/>
                                 <color key="backgroundColor" red="0.090196078430000007" green="0.25098039220000001" blue="0.4549019608" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="54" id="Yf8-7V-yyA"/>
+                                    <constraint firstAttribute="height" constant="54" id="l4k-tr-wDR"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="30"/>
                                 <state key="normal" title="login">
@@ -62,61 +59,52 @@
                                     <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ap1-4e-6ie"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Zi-ZI-6u2">
-                                <rect key="frame" x="88.5" y="310" width="198" height="27"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="27" id="ks3-jo-Xhu"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <color key="textColor" red="0.82642844400000004" green="0.2709082364" blue="0.24221107780000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c62-Hn-T0R">
-                                <rect key="frame" x="88.5" y="381" width="198" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="A5V-yQ-Kzo"/>
-                                </constraints>
+                                <rect key="frame" x="51" y="381" width="273" height="30"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="16"/>
                                 <color key="textColor" red="0.82642844400000004" green="0.2709082364" blue="0.24221107780000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="e-mail" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YqY-xU-5SI">
                                 <rect key="frame" x="51" y="268" width="273" height="41"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="41" id="ZfX-PB-IC7"/>
-                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="27"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z2I-cI-Uhz">
+                                <rect key="frame" x="51" y="309" width="273" height="28"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="0.16194283330000001" blue="0.24666723639999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.43529411759999997" blue="0.3803921569" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="deV-4F-AdH" secondAttribute="bottom" constant="140" id="3H1-3R-9SE"/>
-                            <constraint firstItem="DO9-L9-mCf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="92" id="45N-Zp-Lvp"/>
-                            <constraint firstItem="YqY-xU-5SI" firstAttribute="trailing" secondItem="7Zi-ZI-6u2" secondAttribute="trailing" constant="37.5" id="749-M2-hrW"/>
-                            <constraint firstItem="c62-Hn-T0R" firstAttribute="trailing" secondItem="Tpg-pa-anG" secondAttribute="trailing" constant="-37.5" id="8A7-Bs-Qvh"/>
-                            <constraint firstItem="c62-Hn-T0R" firstAttribute="leading" secondItem="Tpg-pa-anG" secondAttribute="leading" constant="37.5" id="AhF-Vl-cdM"/>
-                            <constraint firstItem="Rhh-I1-9mk" firstAttribute="top" secondItem="7Zi-ZI-6u2" secondAttribute="bottom" constant="8" symbolic="YES" id="HMd-ea-Q52"/>
-                            <constraint firstItem="7Zi-ZI-6u2" firstAttribute="leading" secondItem="Rhh-I1-9mk" secondAttribute="leading" constant="37.5" id="Hi0-Le-E7t"/>
-                            <constraint firstItem="Rhh-I1-9mk" firstAttribute="trailing" secondItem="c62-Hn-T0R" secondAttribute="trailing" constant="37.5" id="Jk0-Gq-RgL"/>
-                            <constraint firstItem="c62-Hn-T0R" firstAttribute="top" secondItem="Rhh-I1-9mk" secondAttribute="bottom" constant="-4" id="N4P-wN-Flz"/>
-                            <constraint firstItem="Tpg-pa-anG" firstAttribute="leading" secondItem="deV-4F-AdH" secondAttribute="leading" constant="-37.5" id="Odq-UG-e0z"/>
-                            <constraint firstItem="DO9-L9-mCf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RZy-qj-l1X"/>
-                            <constraint firstItem="7Zi-ZI-6u2" firstAttribute="trailing" secondItem="Rhh-I1-9mk" secondAttribute="trailing" constant="-37.5" id="Sie-XH-CRQ"/>
-                            <constraint firstItem="7Zi-ZI-6u2" firstAttribute="top" secondItem="YqY-xU-5SI" secondAttribute="bottom" constant="1" id="ZxL-fA-x1d"/>
-                            <constraint firstItem="YqY-xU-5SI" firstAttribute="leading" secondItem="7Zi-ZI-6u2" secondAttribute="leading" constant="-37.5" id="fTQ-nO-nfn"/>
-                            <constraint firstItem="deV-4F-AdH" firstAttribute="top" secondItem="Tpg-pa-anG" secondAttribute="bottom" constant="24" id="gwl-XS-Uk2"/>
-                            <constraint firstItem="Rhh-I1-9mk" firstAttribute="leading" secondItem="c62-Hn-T0R" secondAttribute="leading" constant="-37.5" id="jXF-Fe-fBb"/>
-                            <constraint firstItem="DO9-L9-mCf" firstAttribute="centerX" secondItem="YqY-xU-5SI" secondAttribute="centerX" id="o3q-D1-8Ud"/>
-                            <constraint firstItem="Tpg-pa-anG" firstAttribute="top" secondItem="c62-Hn-T0R" secondAttribute="bottom" constant="8" symbolic="YES" id="osi-mr-PHi"/>
-                            <constraint firstItem="Tpg-pa-anG" firstAttribute="trailing" secondItem="deV-4F-AdH" secondAttribute="trailing" constant="37.5" id="vsr-0J-B1k"/>
+                            <constraint firstItem="Rhh-I1-9mk" firstAttribute="centerX" secondItem="c62-Hn-T0R" secondAttribute="centerX" id="8Fs-Z7-hSu"/>
+                            <constraint firstItem="Tpg-pa-anG" firstAttribute="top" secondItem="c62-Hn-T0R" secondAttribute="bottom" constant="8" symbolic="YES" id="AgS-ve-OQc"/>
+                            <constraint firstItem="Rhh-I1-9mk" firstAttribute="trailing" secondItem="Tpg-pa-anG" secondAttribute="trailing" id="B0a-Lo-ElJ"/>
+                            <constraint firstItem="YqY-xU-5SI" firstAttribute="trailing" secondItem="Rhh-I1-9mk" secondAttribute="trailing" id="GIB-bh-8Nr"/>
+                            <constraint firstItem="YqY-xU-5SI" firstAttribute="leading" secondItem="Rhh-I1-9mk" secondAttribute="leading" id="HVH-EA-fha"/>
+                            <constraint firstItem="deV-4F-AdH" firstAttribute="top" secondItem="Tpg-pa-anG" secondAttribute="bottom" constant="24" id="I7r-HF-IS3"/>
+                            <constraint firstItem="DO9-L9-mCf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Jci-j3-f3X"/>
+                            <constraint firstItem="DO9-L9-mCf" firstAttribute="centerX" secondItem="YqY-xU-5SI" secondAttribute="centerX" id="Y8p-2R-eI8"/>
+                            <constraint firstItem="Rhh-I1-9mk" firstAttribute="leading" secondItem="Tpg-pa-anG" secondAttribute="leading" id="bj5-AF-yQ0"/>
+                            <constraint firstItem="c62-Hn-T0R" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="51" id="e7V-xg-xTx"/>
+                            <constraint firstItem="YqY-xU-5SI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="51" id="h7c-Uy-RH8"/>
+                            <constraint firstItem="DO9-L9-mCf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="92" id="iWZ-Lc-gdg"/>
+                            <constraint firstItem="Rhh-I1-9mk" firstAttribute="top" secondItem="YqY-xU-5SI" secondAttribute="bottom" constant="36" id="niP-4W-SB7"/>
+                            <constraint firstItem="c62-Hn-T0R" firstAttribute="trailing" secondItem="deV-4F-AdH" secondAttribute="trailing" constant="37" id="qeL-eT-FeP"/>
+                            <constraint firstItem="c62-Hn-T0R" firstAttribute="leading" secondItem="deV-4F-AdH" secondAttribute="leading" constant="-38" id="rGC-KF-MsI"/>
+                            <constraint firstItem="c62-Hn-T0R" firstAttribute="top" secondItem="YqY-xU-5SI" secondAttribute="bottom" constant="72" id="rHh-nQ-SM5"/>
+                            <constraint firstItem="Tpg-pa-anG" firstAttribute="top" secondItem="Rhh-I1-9mk" secondAttribute="bottom" constant="34" id="sSv-cP-Eo7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="deV-4F-AdH" secondAttribute="bottom" constant="140" id="xzU-eO-sAZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="email" destination="YqY-xU-5SI" id="3c7-s9-kWQ"/>
-                        <outlet property="emailLabel" destination="7Zi-ZI-6u2" id="3j0-4W-2Ql"/>
+                        <outlet property="emailLabel" destination="Z2I-cI-Uhz" id="W6j-i5-HZc"/>
                         <outlet property="loginButton" destination="Tpg-pa-anG" id="PZI-nz-mvv"/>
                         <outlet property="password" destination="Rhh-I1-9mk" id="CPf-cn-CY2"/>
                         <outlet property="psswrdLabel" destination="c62-Hn-T0R" id="RrV-z4-i6G"/>
@@ -163,6 +151,12 @@
                     <view key="view" contentMode="scaleToFill" id="IuK-NU-I3v">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="muz-dq-ms1">
+                                <rect key="frame" x="0.0" y="51" width="375" height="567"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="0.43529411759999997" blue="0.3803921569" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="TYj-pb-y2g"/>
                     </view>
@@ -171,7 +165,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O4j-hl-4Zh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="294" y="989"/>
+            <point key="canvasLocation" x="293.60000000000002" y="988.15592203898063"/>
         </scene>
         <!--Places-->
         <scene sceneID="zmb-5X-fNU">
